# terminal

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  REARCHITECTURE.md  Taskfile.yml  agent_helpers.py  browser-script-output-structuring.html  browser-summary-parse-diagram.html  pyproject.toml  spec.md
crates/browser-use-agent/: Cargo.toml
crates/browser-use-agent/src/: config.rs  config_model.rs  config_overrides.rs  error.rs  history.rs  lib.rs  live_executor.rs
crates/browser-use-agent/src/compact/: mod.rs  tests.rs  threshold_tests.rs
crates/browser-use-agent/src/context/: accounting.rs  assembly.rs  constants.rs  image_estimate.rs  inject.rs  inject_tests.rs  mod.rs  mod_tests.rs  normalize.rs  tests_accounting.rs  user_input.rs  workspace_context.rs
crates/browser-use-agent/src/decision/: loop_decision.rs  mod.rs  retry.rs  tool_decision.rs
crates/browser-use-agent/src/entrypoint/: mod.rs  provider.rs
crates/browser-use-agent/src/events/: map.rs  map_tests.rs  mod.rs  names.rs  store_sink.rs  store_sink_tests.rs
crates/browser-use-agent/src/execpolicy/: amend.rs  canonicalize.rs  mod.rs  policy.rs  tests.rs
crates/browser-use-agent/src/goals/: budget.rs  mod.rs  state.rs  steering.rs  tests.rs
crates/browser-use-agent/src/guardian/: approval.rs  circuit.rs  mod.rs  reviewer.rs  tests.rs
crates/browser-use-agent/src/hooks/: config.rs  event.rs  mod.rs  runtime.rs  tests.rs
crates/browser-use-agent/src/infra/: analytics.rs  lifecycle.rs  mod.rs  persistence.rs  review.rs
crates/browser-use-agent/src/mcp/: config.rs  http.rs  manager.rs  mod.rs  oauth.rs  protocol.rs  stdio.rs  tests.rs
crates/browser-use-agent/src/network/: allowlist.rs  approval.rs  config.rs  mod.rs  proxy.rs  tests.rs
crates/browser-use-agent/src/prompts/: mod.rs  tests.rs
crates/browser-use-agent/src/rollout/: archive.rs  fork.rs  mod.rs  tests.rs  truncation.rs
crates/browser-use-agent/src/sandbox_backends/: linux.rs  mod.rs  policy.rs  provider.rs  seatbelt.rs  tests.rs
crates/browser-use-agent/src/session/: lifecycle_tests.rs  mod.rs  notifier.rs  reconstruct.rs  reconstruct_tests.rs  resume.rs  rollback.rs  sink.rs
crates/browser-use-agent/src/skills/: discovery.rs  inject.rs  mention.rs  mod.rs  tests.rs
crates/browser-use-agent/src/subagents/: depth.rs  mailbox.rs  manager.rs  mod.rs  parent_link.rs  registry.rs  role.rs  spawn.rs  store_tree.rs  tests.rs  tree.rs
crates/browser-use-agent/src/task/: abort.rs  driver.rs  driver_tests.rs  lifecycle.rs  mod.rs
crates/browser-use-agent/src/testkit/: mod.rs
crates/browser-use-agent/src/tools/: approval.rs  approval_tests.rs  mod.rs  orchestrator.rs  orchestrator_tests.rs  registry.rs  registry_tests.rs  runtime.rs  sandbox.rs  sandbox_tests.rs  unified_exec.rs
crates/browser-use-agent/src/tools/handlers/: apply_patch.rs  apply_patch_tests.rs  browser.rs  browser_tests.rs  capture.rs  done.rs  done_tests.rs  goal.rs  goal_tests.rs  mcp.rs  mcp_tests.rs  mod.rs  python.rs  python_tests.rs  request_user_input.rs  request_user_input_tests.rs  search.rs  search_tests.rs  shell.rs  shell_tests.rs  subagent.rs  subagent_tests.rs  tool_search.rs  tool_search_tests.rs  update_plan.rs  update_plan_tests.rs  view_image.rs  view_image_tests.rs  web_search.rs  web_search_tests.rs
crates/browser-use-agent/src/turn/: dispatch.rs  dispatch_tests.rs  fusion_tests.rs  loop_driver.rs  loop_tests.rs  mod.rs  model_path.rs  sampling.rs  sampling_tests.rs
crates/browser-use-agent/tests/: live_model_smoke.rs
crates/browser-use-cli/: Cargo.toml
crates/browser-use-cli/src/: main.rs
crates/browser-use-core/: Cargo.toml
crates/browser-use-core/src/: agent_names.txt  assistant_markup.rs  auth.rs  codex_headers.rs  config_overrides.rs  constants.rs  goals.rs  images.rs  lib.rs  mcp.rs  memory_citations.rs  persistence.rs  product_analytics.rs  prompt_image.rs  prompts.rs  review.rs  rollback.rs  telemetry.rs  token_usage.rs  tool_output.rs
crates/browser-use-core/src/tools/: agent_env.rs  command.rs  files.rs  mod.rs
crates/browser-use-llm/: Cargo.toml
crates/browser-use-llm/src/: lib.rs  tool.rs  tool_runtime.rs
crates/browser-use-llm/src/auth/: codex.rs  mod.rs
crates/browser-use-llm/src/protocols/: anthropic_messages.rs  mod.rs  openai_chat.rs  openai_responses.rs
crates/browser-use-llm/src/protocols/utils/: lifecycle.rs  mod.rs  tool_stream.rs
crates/browser-use-llm/src/providers/: anthropic.rs  mod.rs  openai.rs  openai_compatible.rs
crates/browser-use-llm/src/route/: auth.rs  client.rs  endpoint.rs  mod.rs  protocol.rs
crates/browser-use-llm/src/schema/: event.rs  messages.rs  mod.rs
crates/browser-use-providers/: Cargo.toml
crates/browser-use-providers/src/: lib.rs  openrouter.rs
crates/browser-use-runtime/: Cargo.toml
crates/browser-use-runtime/src/: lib.rs
crates/browser-use-tui/: Cargo.toml
crates/browser-use-tui/src/: clipboard_paste.rs  composer.rs  main.rs  markdown.rs  palette.rs  product_analytics.rs  render.rs  runtime.rs  settings.rs  theme.rs  transcript.rs  welcome.rs
datasets/: BU_Bench_V1.json  real_v14_short.json  real_v8.json
docs/: CARVE_PLAN.md  CODEX_CORE_RUNTIME_PHASE_GOAL.md  CUTOVER_PLAN.md  HANDOFF.md  PHASE_F_MAP.md  STATUS.md  agent-alignment-overview.md  agent-gap-log.md  browser-agent-harness-learnings.md  browser-agent-harness-plan.md  browser-harness-parity-iteration.md  browser-harness-parity-plan.md  codex-parity-agent-tui-plan.md  completion-audit.md  eng-4738-browser-management-doctor-plan.md  goal-completion-audit.md  implementation-roadmap.md  implementation-status.md  plan-browser-events-to-model.md  plan-browsercode-inspired-performance.md  plan-fixes-from-v14-run.md  public-launch-checklist.md  real-v8-codex-cloud-run-20260513-174409-report.md  real-v8-head-to-head-112315-vs-174409.md  real-v8-regression-root-cause-deep-dive.md  renderer-v2-complete-build-plan.md  rewrite-verification.md  (+14 more)
feedback-ingest/: Cargo.toml  Dockerfile  README.md  railway.json
feedback-ingest/src/: main.rs
(+153 files in other folders)
