[workspace]
members = [
  "crates/browser-use-agent",
  "crates/browser-use-browser",
  "crates/browser-use-cli",
  "crates/browser-use-core",
  "crates/browser-use-llm",
  "crates/browser-use-providers",
  "crates/browser-use-python-worker",
  "crates/browser-use-protocol",
  "crates/browser-use-store",
  "crates/browser-use-tui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.2"

[workspace.dependencies]
anyhow = "1"
arboard = "3.6.1"
async-trait = "0.1"
base64 = "0.22"
bm25 = "2.3.2"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
futures-util = "0.3"
ignore = "0.4"
rand = "0.9"
iana-time-zone = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1"
rustls = { version = "0.23", default-features = false, features = ["std", "aws_lc_rs"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10.6"
sha2 = "0.10"
similar = "2.7.0"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7"
toml = "0.8"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25"
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }
opentelemetry = { version = "0.32", features = ["trace"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "http-proto", "reqwest-blocking-client", "reqwest-rustls"] }
opentelemetry_sdk = { version = "0.32", features = ["trace"] }
open = "5.3"
portable-pty = "0.9"
pulldown-cmark = "0.10"
syntect = "5"
two-face = { version = "0.5", default-features = false, features = ["syntect-default-onig"] }
unicode-width = "0.2"
