[package]
name = "browser-use-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "browser-use-terminal"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
browser-use-agent = { path = "../browser-use-agent" }
browser-use-browser = { path = "../browser-use-browser" }
browser-use-providers = { path = "../browser-use-providers" }
browser-use-protocol = { path = "../browser-use-protocol" }
browser-use-python-worker = { path = "../browser-use-python-worker" }
browser-use-runtime = { path = "../browser-use-runtime" }
browser-use-store = { path = "../browser-use-store" }
clap.workspace = true
open.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-util.workspace = true
toml.workspace = true
