[package]
name = "browser-use-llm"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["stream"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures-util.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile.workspace = true
