[package]
name = "browser-use-providers"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
browser-use-protocol = { path = "../browser-use-protocol" }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
