[package]
name = "browser-use-providers"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
aws-config = { version = "1", features = ["credentials-login"] }
aws-credential-types = "1"
aws-sigv4 = "1"
aws-types = "1"
base64.workspace = true
browser-use-protocol = { path = "../browser-use-protocol" }
bytes = "1"
chrono.workspace = true
http = "1"
rand = "0.9.4"
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tokio = { version = "1", features = ["rt"] }
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
