[package]
name = "browser-use-tui"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "but"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
browser-use-agent = { path = "../browser-use-agent" }
browser-use-providers = { path = "../browser-use-providers" }
browser-use-protocol = { path = "../browser-use-protocol" }
browser-use-store = { path = "../browser-use-store" }
clap.workspace = true
crossterm.workspace = true
image.workspace = true
open.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
signal-hook = "0.3.18"
syntect.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "io-util", "sync", "time", "net"] }
two-face.workspace = true
unicode-width.workspace = true
